[EventTiming] Remove the check of processing start being before onload

Due to the possible absence of frame or document loader from the
performance object, it's not guaranteed that processing start would be
always earlier than onload.

Reuse existing code to refactor the buffering-before-onload logic.

Bug: 847496
Change-Id: If3fae54e90747572956610bedadd7963463a5dcc
Reviewed-on: https://chromium-review.googlesource.com/1080131
Commit-Queue: Liquan (Max) Gǔ <maxlg@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564736}
Former-commit-id: ddcf12998995d87b6fed15c881ac79dc57ff9e43